--- a/package.json
+++ b/package.json
@@ -9,21 +9,22 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "lucide-react": "^0.552.0",
+    "next": "16.0.1",
     "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "next": "16.0.1"
+    "react-dom": "19.2.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1"
+    "eslint-config-next": "16.0.1",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   },
-    "optionalDependencies": {
+  "optionalDependencies": {
     "@tailwindcss/oxide-linux-x64-gnu": "^4.1.11",
     "@tailwindcss/oxide-win32-x64-msvc": "^4.1.11",
     "lightningcss-win32-x64-msvc": "^1.30.1"
