--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "lucide-react": "^0.552.0",
+    "@supabase/supabase-js": "^2.78.0",
+    "@supabase/ssr": "^0.5.2",
+    "axios": "^1.13.1",
     "next": "16.0.1",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
