--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "lucide-react": "^0.552.0",
-    "@supabase/supabase-js": "^2.78.0",
+    "@heroui/react": "^2.8.5",
     "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.78.0",
     "axios": "^1.13.1",
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.552.0",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
